Update main to output generated at 87041d6

--- a/trains/stations/10/index.html
+++ b/trains/stations/10/index.html
@@ -222,29 +222,89 @@
       </div>
 
       <div class="stations">
-        <img class="station-img" src="/images/trains/stations/sen.webp" />
+        <img
+          class="station-img"
+          alt="Shenstone"
+          title="Shenstone"
+          src="/images/trains/stations/sen.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/sip.webp" />
+        <img
+          class="station-img"
+          alt="Shipton"
+          title="Shipton"
+          src="/images/trains/stations/sip.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/srl.webp" />
+        <img
+          class="station-img"
+          alt="Shirley"
+          title="Shirley"
+          src="/images/trains/stations/srl.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/shr.webp" />
+        <img
+          class="station-img"
+          alt="Shrewsbury"
+          title="Shrewsbury"
+          src="/images/trains/stations/shr.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/sma.webp" />
+        <img
+          class="station-img"
+          alt="Small Heath"
+          title="Small Heath"
+          src="/images/trains/stations/sma.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/sgb.webp" />
+        <img
+          class="station-img"
+          alt="Smethwick Galton Bridge"
+          title="Smethwick Galton Bridge"
+          src="/images/trains/stations/sgb.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/smr.webp" />
+        <img
+          class="station-img"
+          alt="Smethwick Rolfe Street"
+          title="Smethwick Rolfe Street"
+          src="/images/trains/stations/smr.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/sri.webp" />
+        <img
+          class="station-img"
+          alt="Spring Road"
+          title="Spring Road"
+          src="/images/trains/stations/sri.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/sta.webp" />
+        <img
+          class="station-img"
+          alt="Stafford"
+          title="Stafford"
+          src="/images/trains/stations/sta.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/smd.webp" />
+        <img
+          class="station-img"
+          alt="Stamford"
+          title="Stamford"
+          src="/images/trains/stations/smd.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/ssd.webp" />
+        <img
+          class="station-img"
+          alt="Stansted Airport"
+          title="Stansted Airport"
+          src="/images/trains/stations/ssd.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/scf.webp" />
+        <img
+          class="station-img"
+          alt="Stechford"
+          title="Stechford"
+          src="/images/trains/stations/scf.webp"
+        />
       </div>
 
       <div class="counter">
