--- a/trains/stations/11/index.html
+++ b/trains/stations/11/index.html
@@ -222,29 +222,89 @@
       </div>
 
       <div class="stations">
-        <img class="station-img" src="/images/trains/stations/sot.webp" />
+        <img
+          class="station-img"
+          alt="Stoke-on-Trent"
+          title="Stoke-on-Trent"
+          src="/images/trains/stations/sot.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/sne.webp" />
+        <img
+          class="station-img"
+          alt="Stone"
+          title="Stone"
+          src="/images/trains/stations/sne.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/sbj.webp" />
+        <img
+          class="station-img"
+          alt="Stourbridge Junction"
+          title="Stourbridge Junction"
+          src="/images/trains/stations/sbj.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/sbt.webp" />
+        <img
+          class="station-img"
+          alt="Stourbridge Town"
+          title="Stourbridge Town"
+          src="/images/trains/stations/sbt.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/sty.webp" />
+        <img
+          class="station-img"
+          alt="Stratford-upon-Avon Parkway"
+          title="Stratford-upon-Avon Parkway"
+          src="/images/trains/stations/sty.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/sut.webp" />
+        <img
+          class="station-img"
+          alt="Sutton Coldfield"
+          title="Sutton Coldfield"
+          src="/images/trains/stations/sut.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/swi.webp" />
+        <img
+          class="station-img"
+          alt="Swindon"
+          title="Swindon"
+          src="/images/trains/stations/swi.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/tab.webp" />
+        <img
+          class="station-img"
+          alt="Tame Bridge Parkway"
+          title="Tame Bridge Parkway"
+          src="/images/trains/stations/tab.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/tfc.webp" />
+        <img
+          class="station-img"
+          alt="Telford Central"
+          title="Telford Central"
+          src="/images/trains/stations/tfc.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/thw.webp" />
+        <img
+          class="station-img"
+          alt="The Hawthorns"
+          title="The Hawthorns"
+          src="/images/trains/stations/thw.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/tlk.webp" />
+        <img
+          class="station-img"
+          alt="The Lakes"
+          title="The Lakes"
+          src="/images/trains/stations/tlk.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/thl.webp" />
+        <img
+          class="station-img"
+          alt="Tile Hill"
+          title="Tile Hill"
+          src="/images/trains/stations/thl.webp"
+        />
       </div>
 
       <div class="counter">
