--- a/trains/stations/12/index.html
+++ b/trains/stations/12/index.html
@@ -222,29 +222,89 @@
       </div>
 
       <div class="stations">
-        <img class="station-img" src="/images/trains/stations/tot.webp" />
+        <img
+          class="station-img"
+          alt="Totnes"
+          title="Totnes"
+          src="/images/trains/stations/tot.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/tom.webp" />
+        <img
+          class="station-img"
+          alt="Tottenham Hale"
+          title="Tottenham Hale"
+          src="/images/trains/stations/tom.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/tuh.webp" />
+        <img
+          class="station-img"
+          alt="Tulse Hill"
+          title="Tulse Hill"
+          src="/images/trains/stations/tuh.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/twy.webp" />
+        <img
+          class="station-img"
+          alt="Twyford"
+          title="Twyford"
+          src="/images/trains/stations/twy.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/tys.webp" />
+        <img
+          class="station-img"
+          alt="Tyseley"
+          title="Tyseley"
+          src="/images/trains/stations/tys.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/uni.webp" />
+        <img
+          class="station-img"
+          alt="University"
+          title="University"
+          src="/images/trains/stations/uni.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/wto.webp" />
+        <img
+          class="station-img"
+          alt="Water Orton"
+          title="Water Orton"
+          src="/images/trains/stations/wto.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/wsl.webp" />
+        <img
+          class="station-img"
+          alt="Walsall"
+          title="Walsall"
+          src="/images/trains/stations/wsl.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/wrw.webp" />
+        <img
+          class="station-img"
+          alt="Warwick"
+          title="Warwick"
+          src="/images/trains/stations/wrw.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/wrp.webp" />
+        <img
+          class="station-img"
+          alt="Warwick Parkway"
+          title="Warwick Parkway"
+          src="/images/trains/stations/wrp.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/wth.webp" />
+        <img
+          class="station-img"
+          alt="Whitehaven"
+          title="Whitehaven"
+          src="/images/trains/stations/wth.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/wvs.webp" />
+        <img
+          class="station-img"
+          alt="Wilmcote"
+          title="Wilmcote"
+          src="/images/trains/stations/wvs.webp"
+        />
       </div>
 
       <div class="counter">
