--- a/trains/stations/13/index.html
+++ b/trains/stations/13/index.html
@@ -222,29 +222,89 @@
       </div>
 
       <div class="stations">
-        <img class="station-img" src="/images/trains/stations/wml.webp" />
+        <img
+          class="station-img"
+          alt="Wilmslow"
+          title="Wilmslow"
+          src="/images/trains/stations/wml.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/wne.webp" />
+        <img
+          class="station-img"
+          alt="Wilnecote"
+          title="Wilnecote"
+          src="/images/trains/stations/wne.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/wtt.webp" />
+        <img
+          class="station-img"
+          alt="Witton"
+          title="Witton"
+          src="/images/trains/stations/wtt.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/wok.webp" />
+        <img
+          class="station-img"
+          alt="Woking"
+          title="Woking"
+          src="/images/trains/stations/wok.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/www.webp" />
+        <img
+          class="station-img"
+          alt="Wootton Wawen"
+          title="Wootton Wawen"
+          src="/images/trains/stations/www.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/wof.webp" />
+        <img
+          class="station-img"
+          alt="Worcester Foregate Street"
+          title="Worcester Foregate Street"
+          src="/images/trains/stations/wof.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/wos.webp" />
+        <img
+          class="station-img"
+          alt="Worcester Shrub Hill"
+          title="Worcester Shrub Hill"
+          src="/images/trains/stations/wos.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/wop.webp" />
+        <img
+          class="station-img"
+          alt="Worcestershire Parkway"
+          title="Worcestershire Parkway"
+          src="/images/trains/stations/wop.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/wyl.webp" />
+        <img
+          class="station-img"
+          alt="Wylde Green"
+          title="Wylde Green"
+          src="/images/trains/stations/wyl.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/wyt.webp" />
+        <img
+          class="station-img"
+          alt="Wythall"
+          title="Wythall"
+          src="/images/trains/stations/wyt.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/yrd.webp" />
+        <img
+          class="station-img"
+          alt="Yardley Wood"
+          title="Yardley Wood"
+          src="/images/trains/stations/yrd.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/yrk.webp" />
+        <img
+          class="station-img"
+          alt="York"
+          title="York"
+          src="/images/trains/stations/yrk.webp"
+        />
       </div>
 
       <div class="counter">
