--- a/trains/stations/2/index.html
+++ b/trains/stations/2/index.html
@@ -222,29 +222,89 @@
       </div>
 
       <div class="stations">
-        <img class="station-img" src="/images/trains/stations/beu.webp" />
+        <img
+          class="station-img"
+          alt="Beaulieu Road"
+          title="Beaulieu Road"
+          src="/images/trains/stations/beu.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/bee.webp" />
+        <img
+          class="station-img"
+          alt="Beeston"
+          title="Beeston"
+          src="/images/trains/stations/bee.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/bkw.webp" />
+        <img
+          class="station-img"
+          alt="Berkswell"
+          title="Berkswell"
+          src="/images/trains/stations/bkw.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/bsc.webp" />
+        <img
+          class="station-img"
+          alt="Bescot Stadium"
+          title="Bescot Stadium"
+          src="/images/trains/stations/bsc.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/bhi.webp" />
+        <img
+          class="station-img"
+          alt="Birmingham International"
+          title="Birmingham International"
+          src="/images/trains/stations/bhi.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/bhm.webp" />
+        <img
+          class="station-img"
+          alt="Birmingham New Street"
+          title="Birmingham New Street"
+          src="/images/trains/stations/bhm.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/bsw.webp" />
+        <img
+          class="station-img"
+          alt="Birmingham Snow Hill"
+          title="Birmingham Snow Hill"
+          src="/images/trains/stations/bsw.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/bkt.webp" />
+        <img
+          class="station-img"
+          alt="Blake Street"
+          title="Blake Street"
+          src="/images/trains/stations/bkt.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/bbs.webp" />
+        <img
+          class="station-img"
+          alt="Bordesley"
+          title="Bordesley"
+          src="/images/trains/stations/bbs.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/bcu.webp" />
+        <img
+          class="station-img"
+          alt="Brockenhurst"
+          title="Brockenhurst"
+          src="/images/trains/stations/bcu.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/bul.webp" />
+        <img
+          class="station-img"
+          alt="Butlers Lane"
+          title="Butlers Lane"
+          src="/images/trains/stations/bul.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/cbg.webp" />
+        <img
+          class="station-img"
+          alt="Cambridge"
+          title="Cambridge"
+          src="/images/trains/stations/cbg.webp"
+        />
       </div>
 
       <div class="counter">
