--- a/trains/stations/3/index.html
+++ b/trains/stations/3/index.html
@@ -222,29 +222,89 @@
       </div>
 
       <div class="stations">
-        <img class="station-img" src="/images/trains/stations/cmb.webp" />
+        <img
+          class="station-img"
+          alt="Cambridge North"
+          title="Cambridge North"
+          src="/images/trains/stations/cmb.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/cnl.webp" />
+        <img
+          class="station-img"
+          alt="Canley"
+          title="Canley"
+          src="/images/trains/stations/cnl.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/ctr.webp" />
+        <img
+          class="station-img"
+          alt="Chester"
+          title="Chester"
+          src="/images/trains/stations/ctr.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/crd.webp" />
+        <img
+          class="station-img"
+          alt="Chester Road"
+          title="Chester Road"
+          src="/images/trains/stations/crd.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/crk.webp" />
+        <img
+          class="station-img"
+          alt="Chirk"
+          title="Chirk"
+          src="/images/trains/stations/crk.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/ctt.webp" />
+        <img
+          class="station-img"
+          alt="Church Stretton"
+          title="Church Stretton"
+          src="/images/trains/stations/ctt.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/clv.webp" />
+        <img
+          class="station-img"
+          alt="Claverdon"
+          title="Claverdon"
+          src="/images/trains/stations/clv.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/cwl.webp" />
+        <img
+          class="station-img"
+          alt="Colwall"
+          title="Colwall"
+          src="/images/trains/stations/cwl.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/ckl.webp" />
+        <img
+          class="station-img"
+          alt="Corkickle"
+          title="Corkickle"
+          src="/images/trains/stations/ckl.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/crr.webp" />
+        <img
+          class="station-img"
+          alt="Corrour"
+          title="Corrour"
+          src="/images/trains/stations/crr.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/csy.webp" />
+        <img
+          class="station-img"
+          alt="Coseley"
+          title="Coseley"
+          src="/images/trains/stations/csy.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/cos.webp" />
+        <img
+          class="station-img"
+          alt="Cosford"
+          title="Cosford"
+          src="/images/trains/stations/cos.webp"
+        />
       </div>
 
       <div class="counter">
