--- a/trains/stations/4/index.html
+++ b/trains/stations/4/index.html
@@ -222,29 +222,89 @@
       </div>
 
       <div class="stations">
-        <img class="station-img" src="/images/trains/stations/cov.webp" />
+        <img
+          class="station-img"
+          alt="Coventry"
+          title="Coventry"
+          src="/images/trains/stations/cov.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/cra.webp" />
+        <img
+          class="station-img"
+          alt="Cradley Heath"
+          title="Cradley Heath"
+          src="/images/trains/stations/cra.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/cre.webp" />
+        <img
+          class="station-img"
+          alt="Crewe"
+          title="Crewe"
+          src="/images/trains/stations/cre.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/cmf.webp" />
+        <img
+          class="station-img"
+          alt="Cromford"
+          title="Cromford"
+          src="/images/trains/stations/cmf.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/dam.webp" />
+        <img
+          class="station-img"
+          alt="Dalmeny"
+          title="Dalmeny"
+          src="/images/trains/stations/dam.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/dgt.webp" />
+        <img
+          class="station-img"
+          alt="Deansgate"
+          title="Deansgate"
+          src="/images/trains/stations/dgt.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/did.webp" />
+        <img
+          class="station-img"
+          alt="Didcot Parkway"
+          title="Didcot Parkway"
+          src="/images/trains/stations/did.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/dud.webp" />
+        <img
+          class="station-img"
+          alt="Duddeston"
+          title="Duddeston"
+          src="/images/trains/stations/dud.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/ewd.webp" />
+        <img
+          class="station-img"
+          alt="Earlswood"
+          title="Earlswood"
+          src="/images/trains/stations/ewd.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/eph.webp" />
+        <img
+          class="station-img"
+          alt="Elephant & Castle"
+          title="Elephant & Castle"
+          src="/images/trains/stations/eph.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/zfd.webp" />
+        <img
+          class="station-img"
+          alt="Farringdon"
+          title="Farringdon"
+          src="/images/trains/stations/zfd.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/ftw.webp" />
+        <img
+          class="station-img"
+          alt="Fort William"
+          title="Fort William"
+          src="/images/trains/stations/ftw.webp"
+        />
       </div>
 
       <div class="counter">
