--- a/trains/stations/5/index.html
+++ b/trains/stations/5/index.html
@@ -222,29 +222,89 @@
       </div>
 
       <div class="stations">
-        <img class="station-img" src="/images/trains/stations/fok.webp" />
+        <img
+          class="station-img"
+          alt="Four Oaks"
+          title="Four Oaks"
+          src="/images/trains/stations/fok.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/gtw.webp" />
+        <img
+          class="station-img"
+          alt="Gatwick Airport"
+          title="Gatwick Airport"
+          src="/images/trains/stations/gtw.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/glf.webp" />
+        <img
+          class="station-img"
+          alt="Glenfinnan"
+          title="Glenfinnan"
+          src="/images/trains/stations/glf.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/gcr.webp" />
+        <img
+          class="station-img"
+          alt="Gloucester"
+          title="Gloucester"
+          src="/images/trains/stations/gcr.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/gvh.webp" />
+        <img
+          class="station-img"
+          alt="Gravelly Hill"
+          title="Gravelly Hill"
+          src="/images/trains/stations/gvh.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/gmv.webp" />
+        <img
+          class="station-img"
+          alt="Great Malvern"
+          title="Great Malvern"
+          src="/images/trains/stations/gmv.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/glq.webp" />
+        <img
+          class="station-img"
+          alt="Glasgow Queen Street"
+          title="Glasgow Queen Street"
+          src="/images/trains/stations/glq.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/hlg.webp" />
+        <img
+          class="station-img"
+          alt="Hall Green"
+          title="Hall Green"
+          src="/images/trains/stations/hlg.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/hia.webp" />
+        <img
+          class="station-img"
+          alt="Hampton-in-Arden"
+          title="Hampton-in-Arden"
+          src="/images/trains/stations/hia.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/hsd.webp" />
+        <img
+          class="station-img"
+          alt="Hamstead"
+          title="Hamstead"
+          src="/images/trains/stations/hsd.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/htn.webp" />
+        <img
+          class="station-img"
+          alt="Hatton"
+          title="Hatton"
+          src="/images/trains/stations/htn.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/hym.webp" />
+        <img
+          class="station-img"
+          alt="Haymarket"
+          title="Haymarket"
+          src="/images/trains/stations/hym.webp"
+        />
       </div>
 
       <div class="counter">
