--- a/trains/stations/6/index.html
+++ b/trains/stations/6/index.html
@@ -222,29 +222,89 @@
       </div>
 
       <div class="stations">
-        <img class="station-img" src="/images/trains/stations/hkw.webp" />
+        <img
+          class="station-img"
+          alt="Hackney Wick"
+          title="Hackney Wick"
+          src="/images/trains/stations/hkw.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/hnl.webp" />
+        <img
+          class="station-img"
+          alt="Henley-in-Arden"
+          title="Henley-in-Arden"
+          src="/images/trains/stations/hnl.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/hot.webp" />
+        <img
+          class="station-img"
+          alt="Henley-on-Thames"
+          title="Henley-on-Thames"
+          src="/images/trains/stations/hot.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/hst.webp" />
+        <img
+          class="station-img"
+          alt="High Street"
+          title="High Street"
+          src="/images/trains/stations/hst.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/hyb.webp" />
+        <img
+          class="station-img"
+          alt="Honeybourne"
+          title="Honeybourne"
+          src="/images/trains/stations/hyb.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/jeq.webp" />
+        <img
+          class="station-img"
+          alt="Jewellery Quarter"
+          title="Jewellery Quarter"
+          src="/images/trains/stations/jeq.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/kgm.webp" />
+        <img
+          class="station-img"
+          alt="Kingham"
+          title="Kingham"
+          src="/images/trains/stations/kgm.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/lan.webp" />
+        <img
+          class="station-img"
+          alt="Lancaster"
+          title="Lancaster"
+          src="/images/trains/stations/lan.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/leh.webp" />
+        <img
+          class="station-img"
+          alt="Lea Hall"
+          title="Lea Hall"
+          src="/images/trains/stations/leh.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/lms.webp" />
+        <img
+          class="station-img"
+          alt="Leamington Spa"
+          title="Leamington Spa"
+          src="/images/trains/stations/lms.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/led.webp" />
+        <img
+          class="station-img"
+          alt="Ledbury"
+          title="Ledbury"
+          src="/images/trains/stations/led.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/lds.webp" />
+        <img
+          class="station-img"
+          alt="Leeds"
+          title="Leeds"
+          src="/images/trains/stations/lds.webp"
+        />
       </div>
 
       <div class="counter">
