--- a/trains/stations/7/index.html
+++ b/trains/stations/7/index.html
@@ -222,29 +222,89 @@
       </div>
 
       <div class="stations">
-        <img class="station-img" src="/images/trains/stations/lic.webp" />
+        <img
+          class="station-img"
+          alt="Lichfield City"
+          title="Lichfield City"
+          src="/images/trains/stations/lic.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/lbg.webp" />
+        <img
+          class="station-img"
+          alt="London Bridge"
+          title="London Bridge"
+          src="/images/trains/stations/lbg.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/eus.webp" />
+        <img
+          class="station-img"
+          alt="London Euston"
+          title="London Euston"
+          src="/images/trains/stations/eus.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/myb.webp" />
+        <img
+          class="station-img"
+          alt="London Marylebone"
+          title="London Marylebone"
+          src="/images/trains/stations/myb.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/lob.webp" />
+        <img
+          class="station-img"
+          alt="Longbridge"
+          title="Longbridge"
+          src="/images/trains/stations/lob.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/lye.webp" />
+        <img
+          class="station-img"
+          alt="Lye"
+          title="Lye"
+          src="/images/trains/stations/lye.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/lyp.webp" />
+        <img
+          class="station-img"
+          alt="Lymington Pier"
+          title="Lymington Pier"
+          src="/images/trains/stations/lyp.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/lyt.webp" />
+        <img
+          class="station-img"
+          alt="Lymington Town"
+          title="Lymington Town"
+          src="/images/trains/stations/lyt.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/mvl.webp" />
+        <img
+          class="station-img"
+          alt="Malvern Link"
+          title="Malvern Link"
+          src="/images/trains/stations/mvl.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/mia.webp" />
+        <img
+          class="station-img"
+          alt="Manchester Airport"
+          title="Manchester Airport"
+          src="/images/trains/stations/mia.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/man.webp" />
+        <img
+          class="station-img"
+          alt="Manchester Piccadilly"
+          title="Manchester Piccadilly"
+          src="/images/trains/stations/man.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/mco.webp" />
+        <img
+          class="station-img"
+          alt="Manchester Oxford Road"
+          title="Manchester Oxford Road"
+          src="/images/trains/stations/mco.webp"
+        />
       </div>
 
       <div class="counter">
