--- a/trains/stations/8/index.html
+++ b/trains/stations/8/index.html
@@ -222,29 +222,89 @@
       </div>
 
       <div class="stations">
-        <img class="station-img" src="/images/trains/stations/mgn.webp" />
+        <img
+          class="station-img"
+          alt="Marston Green"
+          title="Marston Green"
+          src="/images/trains/stations/mgn.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/mat.webp" />
+        <img
+          class="station-img"
+          alt="Matlock"
+          title="Matlock"
+          src="/images/trains/stations/mat.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/mtb.webp" />
+        <img
+          class="station-img"
+          alt="Matlock Bath"
+          title="Matlock Bath"
+          src="/images/trains/stations/mtb.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/mim.webp" />
+        <img
+          class="station-img"
+          alt="Moreton-in-Marsh"
+          title="Moreton-in-Marsh"
+          src="/images/trains/stations/mim.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/not.webp" />
+        <img
+          class="station-img"
+          alt="Nottingham"
+          title="Nottingham"
+          src="/images/trains/stations/not.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/nqu.webp" />
+        <img
+          class="station-img"
+          alt="North Queensferry"
+          title="North Queensferry"
+          src="/images/trains/stations/nqu.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/nfd.webp" />
+        <img
+          class="station-img"
+          alt="Northfield"
+          title="Northfield"
+          src="/images/trains/stations/nfd.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/nun.webp" />
+        <img
+          class="station-img"
+          alt="Nuneaton"
+          title="Nuneaton"
+          src="/images/trains/stations/nun.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/okm.webp" />
+        <img
+          class="station-img"
+          alt="Oakham"
+          title="Oakham"
+          src="/images/trains/stations/okm.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/ohl.webp" />
+        <img
+          class="station-img"
+          alt="Old Hill"
+          title="Old Hill"
+          src="/images/trains/stations/ohl.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/olt.webp" />
+        <img
+          class="station-img"
+          alt="Olton"
+          title="Olton"
+          src="/images/trains/stations/olt.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/ptk.webp" />
+        <img
+          class="station-img"
+          alt="Partick"
+          title="Partick"
+          src="/images/trains/stations/ptk.webp"
+        />
       </div>
 
       <div class="counter">
