--- a/trains/stations/9/index.html
+++ b/trains/stations/9/index.html
@@ -222,29 +222,89 @@
       </div>
 
       <div class="stations">
-        <img class="station-img" src="/images/trains/stations/pkg.webp" />
+        <img
+          class="station-img"
+          alt="Penkridge"
+          title="Penkridge"
+          src="/images/trains/stations/pkg.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/pry.webp" />
+        <img
+          class="station-img"
+          alt="Perry Barr"
+          title="Perry Barr"
+          src="/images/trains/stations/pry.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/psw.webp" />
+        <img
+          class="station-img"
+          alt="Polesworth"
+          title="Polesworth"
+          src="/images/trains/stations/psw.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/pre.webp" />
+        <img
+          class="station-img"
+          alt="Preston"
+          title="Preston"
+          src="/images/trains/stations/pre.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/rdg.webp" />
+        <img
+          class="station-img"
+          alt="Reading"
+          title="Reading"
+          src="/images/trains/stations/rdg.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/rdt.webp" />
+        <img
+          class="station-img"
+          alt="Redditch"
+          title="Redditch"
+          src="/images/trains/stations/rdt.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/row.webp" />
+        <img
+          class="station-img"
+          alt="Rowley Regis"
+          title="Rowley Regis"
+          src="/images/trains/stations/row.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/rua.webp" />
+        <img
+          class="station-img"
+          alt="Ruabon"
+          title="Ruabon"
+          src="/images/trains/stations/rua.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/rug.webp" />
+        <img
+          class="station-img"
+          alt="Rugby"
+          title="Rugby"
+          src="/images/trains/stations/rug.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/rgl.webp" />
+        <img
+          class="station-img"
+          alt="Rugeley Trent Valley"
+          title="Rugeley Trent Valley"
+          src="/images/trains/stations/rgl.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/sad.webp" />
+        <img
+          class="station-img"
+          alt="Sandwell and Dudley"
+          title="Sandwell and Dudley"
+          src="/images/trains/stations/sad.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/sly.webp" />
+        <img
+          class="station-img"
+          alt="Selly Oak"
+          title="Selly Oak"
+          src="/images/trains/stations/sly.webp"
+        />
       </div>
 
       <div class="counter">
