--- a/trains/stations/index.html
+++ b/trains/stations/index.html
@@ -222,29 +222,89 @@
       </div>
 
       <div class="stations">
-        <img class="station-img" src="/images/trains/stations/acg.webp" />
+        <img
+          class="station-img"
+          alt="Acocks Green"
+          title="Acocks Green"
+          src="/images/trains/stations/acg.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/add.webp" />
+        <img
+          class="station-img"
+          alt="Adderley Park"
+          title="Adderley Park"
+          src="/images/trains/stations/add.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/alb.webp" />
+        <img
+          class="station-img"
+          alt="Albrighton"
+          title="Albrighton"
+          src="/images/trains/stations/alb.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/aht.webp" />
+        <img
+          class="station-img"
+          alt="Aldershot"
+          title="Aldershot"
+          src="/images/trains/stations/aht.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/alv.webp" />
+        <img
+          class="station-img"
+          alt="Alvechurch"
+          title="Alvechurch"
+          src="/images/trains/stations/alv.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/ash.webp" />
+        <img
+          class="station-img"
+          alt="Ash"
+          title="Ash"
+          src="/images/trains/stations/ash.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/anf.webp" />
+        <img
+          class="station-img"
+          alt="Ashurst New Forest"
+          title="Ashurst New Forest"
+          src="/images/trains/stations/anf.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/ast.webp" />
+        <img
+          class="station-img"
+          alt="Aston"
+          title="Aston"
+          src="/images/trains/stations/ast.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/ban.webp" />
+        <img
+          class="station-img"
+          alt="Banbury"
+          title="Banbury"
+          src="/images/trains/stations/ban.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/btg.webp" />
+        <img
+          class="station-img"
+          alt="Barnt Green"
+          title="Barnt Green"
+          src="/images/trains/stations/btg.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/bif.webp" />
+        <img
+          class="station-img"
+          alt="Barrow-in-Furness"
+          title="Barrow-in-Furness"
+          src="/images/trains/stations/bif.webp"
+        />
 
-        <img class="station-img" src="/images/trains/stations/ber.webp" />
+        <img
+          class="station-img"
+          alt="Bearley"
+          title="Bearley"
+          src="/images/trains/stations/ber.webp"
+        />
       </div>
 
       <div class="counter">
